bookinfo/vs-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
  - productpage.marathon.l4lb.thisdcos.directory
  http:
  - route:
    - destination:
        host: productpage.marathon.l4lb.thisdcos.directory
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews.marathon.l4lb.thisdcos.directory
  http:
  - route:
    - destination:
        host: reviews.marathon.l4lb.thisdcos.directory
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings.marathon.l4lb.thisdcos.directory
  http:
  - route:
    - destination:
        host: ratings.marathon.l4lb.thisdcos.directory
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details.marathon.l4lb.thisdcos.directory
  http:
  - route:
    - destination:
        host: details.marathon.l4lb.thisdcos.directory
        subset: v1
---
