bookinfo/vs-reviews-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews.marathon.l4lb.thisdcos.directory
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    fault:
      abort:
        percent: 100
        httpStatus: 500
    route:
    - destination:
        host: reviews.marathon.l4lb.thisdcos.directory
        subset: v1
  - route:
    - destination:
        host: reviews.marathon.l4lb.thisdcos.directory
        subset: v1
